[gd_scene load_steps=19 format=3 uid="uid://d0r6xs7h41a7"]

[ext_resource type="PackedScene" uid="uid://dsp2ucbs1ikcf" path="res://scene/player.tscn" id="1_glv2v"]
[ext_resource type="Script" uid="uid://iccq5a4v3ewm" path="res://Script/main.gd" id="1_h6nst"]
[ext_resource type="PackedScene" uid="uid://bueiiwjhqndmn" path="res://scene/mob.tscn" id="2_hr7lf"]
[ext_resource type="Texture2D" uid="uid://c5cbsuc24ygab" path="res://asset/photo-1633542268512-07664f7ce729.jpg" id="3_mnmej"]
[ext_resource type="Texture2D" uid="uid://dk41b5lf6oqyi" path="res://asset/grass_0.png" id="3_yiwpq"]
[ext_resource type="MeshLibrary" uid="uid://dd5q271avo1wc" path="res://scene/grid.tres" id="6_o6q0f"]
[ext_resource type="PackedScene" uid="uid://dkmgmgveutgqu" path="res://asset/Bush.glb" id="7_s5yxy"]
[ext_resource type="AudioStream" uid="uid://cu3agn5h5fnvj" path="res://asset/sound/theme.ogg" id="8_eik88"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_o6q0f"]
sky_top_color = Color(0.0679686, 0.0903384, 0.121446, 1)
sky_horizon_color = Color(0.250015, 0.253595, 0.283395, 1)
sky_curve = 0.600001
sky_cover = ExtResource("3_mnmej")
sky_cover_modulate = Color(0.408329, 0.408329, 0.408329, 1)

[sub_resource type="Sky" id="Sky_s5yxy"]
sky_material = SubResource("ProceduralSkyMaterial_o6q0f")

[sub_resource type="Environment" id="Environment_eik88"]
background_mode = 2
sky = SubResource("Sky_s5yxy")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="BoxShape3D" id="BoxShape3D_rxg2q"]
size = Vector3(119, 2, 120)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mnmej"]
albedo_color = Color(1, 0.894118, 1, 1)
albedo_texture = ExtResource("3_yiwpq")
normal_enabled = true
normal_scale = -16.0

[sub_resource type="BoxMesh" id="BoxMesh_glv2v"]
material = SubResource("StandardMaterial3D_mnmej")
size = Vector3(60, 2, 60)

[sub_resource type="BoxShape3D" id="BoxShape3D_hr7lf"]
size = Vector3(125, 27, 124)

[sub_resource type="Curve3D" id="Curve3D_hr7lf"]
closed = true
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -57.9261, 3.99229, 56.6994, 0, 0, 0, 0, 0, 0, -57.4972, 3.88284, -56.6376, 0, 0, 0, 0, 0, 0, 56.4573, 3.90214, -57.5778, 0, 0, 0, 0, 0, 0, 55.987, 3.81991, 57.3407),
"tilts": PackedFloat32Array(0, 0, 0, 0)
}
point_count = 4

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_o6q0f"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_s5yxy"]
material = SubResource("StandardMaterial3D_o6q0f")
size = Vector3(125, 1, 1)

[node name="Node3D" type="Node3D"]
script = ExtResource("1_h6nst")
mobscene = ExtResource("2_hr7lf")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_eik88")

[node name="StaticBody3D" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, -1, 0)
shape = SubResource("BoxShape3D_rxg2q")

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D"]
transform = Transform3D(2, 0, 0, 0, 1, 0, 0, 0, 2, 0, -1, 0)
mesh = SubResource("BoxMesh_glv2v")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 13, 0.5)
shape = SubResource("BoxShape3D_hr7lf")

[node name="Player" parent="." instance=ExtResource("1_glv2v")]
transform = Transform3D(0.56, 0, 0, 0, 0.56, 0, 0, 0, 0.56, 0, 5.95181, 0)

[node name="Spawnpoint" type="Path3D" parent="."]
curve = SubResource("Curve3D_hr7lf")

[node name="Spawn" type="PathFollow3D" parent="Spawnpoint"]
transform = Transform3D(0.999993, 3.65441e-06, -0.00378428, 1.13687e-13, 0.999985, 0.000965698, 0.00378428, -0.000965677, 0.999993, -57.9261, 3.99229, 56.6994)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CanvasLayer" type="CanvasLayer" parent="UI"]

[node name="Score" type="Label" parent="UI/CanvasLayer"]
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 46
text = "Score: 0"

[node name="SpawnerTime" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="ScoreTimer" type="Timer" parent="."]
autostart = true

[node name="ScoreUp" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="RandomRok" type="Timer" parent="."]
one_shot = true

[node name="around" type="Node3D" parent="."]

[node name="Tree" type="GridMap" parent="around"]
transform = Transform3D(6.275, 0, 0, 0, 6.275, 0, 0, 0, 6.275, 0, -4.675, 0)
mesh_library = ExtResource("6_o6q0f")
data = {
"cells": PackedInt32Array(65531, 65531, 1441792, 65532, 65531, 655360, 65533, 65531, 655360, 65534, 65531, 655360, 65535, 65531, 655360, 0, 65531, 655360, 1, 65531, 655360, 2, 65531, 655360, 3, 65531, 655360, 4, 65531, 655360, 4, 65532, 655360, 4, 65533, 655360, 4, 65534, 655360, 4, 65535, 655360, 4, 0, 655360, 4, 1, 655360, 4, 2, 655360, 4, 3, 655360, 4, 4, 655360, 3, 4, 655360, 2, 4, 655360, 1, 4, 655360, 0, 4, 655360, 65535, 4, 655360, 65534, 4, 655360, 65533, 4, 655360, 65532, 4, 655360, 65531, 4, 655360, 65531, 3, 655360, 65531, 2, 655360, 65531, 1, 655360, 65531, 0, 655360, 65531, 65535, 655360, 65531, 65534, 655360, 65531, 65533, 655360, 65531, 65532, 655360, 65533, 2, 655360, 65534, 65533, 655360, 2, 1, 655360, 3, 65533, 655360)
}

[node name="Node3D" type="Node3D" parent="around"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="around/Node3D"]
transform = Transform3D(1, 0, 0, 0, 15.4224, 0, 0, 0, 1, 2, 3, 60)
mesh = SubResource("BoxMesh_s5yxy")
skeleton = NodePath("../..")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="around/Node3D"]
transform = Transform3D(1, 0, 0, 0, 16.128, 0, 0, 0, 1, 2, 3, -60)
mesh = SubResource("BoxMesh_s5yxy")
skeleton = NodePath("../..")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="around/Node3D"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 16.128, 0, 1, 0, -4.37114e-08, 59, 3, 1)
mesh = SubResource("BoxMesh_s5yxy")
skeleton = NodePath("../..")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="around/Node3D"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 16.128, 0, 1, 0, -4.37114e-08, -60, 3, 1)
mesh = SubResource("BoxMesh_s5yxy")
skeleton = NodePath("../..")

[node name="Bush" type="Node3D" parent="around"]

[node name="Bush" parent="around/Bush" instance=ExtResource("7_s5yxy")]
transform = Transform3D(20.7, 0, 0, 0, 20.7, 0, 0, 0, 20.7, -53, 0, 0)

[node name="Bush2" parent="around/Bush" instance=ExtResource("7_s5yxy")]
transform = Transform3D(20.7, 0, 0, 0, 20.7, 0, 0, 0, 20.7, -48, 1, 45)

[node name="Bush3" parent="around/Bush" instance=ExtResource("7_s5yxy")]
transform = Transform3D(20.7, 0, 0, 0, 20.7, 0, 0, 0, 20.7, 31, 1, 44)

[node name="Bush4" parent="around/Bush" instance=ExtResource("7_s5yxy")]
transform = Transform3D(20.7, 0, 0, 0, 20.7, 0, 0, 0, 20.7, 49, 1, 44)

[node name="Bush5" parent="around/Bush" instance=ExtResource("7_s5yxy")]
transform = Transform3D(20.7, 0, 0, 0, 20.7, 0, 0, 0, 20.7, 40, 1, 7)

[node name="Bush6" parent="around/Bush" instance=ExtResource("7_s5yxy")]
transform = Transform3D(20.7, 0, 0, 0, 20.7, 0, 0, 0, 20.7, 48, 1, -16)

[node name="Bush7" parent="around/Bush" instance=ExtResource("7_s5yxy")]
transform = Transform3D(20.7, 0, 0, 0, 20.7, 0, 0, 0, 20.7, 33, 1, -41)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_eik88")
volume_db = -7.5
pitch_scale = 0.7
autoplay = true

[connection signal="area_exited" from="Area3D" to="." method="_on_area_3d_area_exited"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
[connection signal="death" from="Player" to="." method="_on_player_death"]
[connection signal="timeout" from="SpawnerTime" to="." method="_on_spawner_time_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="ScoreUp" to="." method="_on_score_up_timeout"]
[connection signal="timeout" from="RandomRok" to="." method="_on_random_rok_timeout"]
